--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,32 +1,42 @@
-// Custom.scss
-// This is the file you will want to update to customize your page.
+@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap");
 
-// Import Google fonts here
-
-
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+3&display=swap");
 
 // Include any default variable overrides here (colors, font sizes, font family, etc..)
 
+$primary: #a04add;
+$secondary: #3b53c7;
+$success: #a4d882;
+$info: #59c1ef;
+$warning: #fff689;
+$danger: #e5446d;
+$light: #f2f2f2;
+$dark: #181853;
+
+$body-bg: #f2f2f2;
 
 
-// Adjust nav link hover color here
+$navbar-dark-hover-color: #a04add;
+
+$font-family-sans-serif: "Source Sans 3", sans-serif;
+
+
+$headings-font-family: "Libre Baskerville", serif;
+
+$h1-font-size: 3.052rem;
+$h2-font-size: 2.441rem;
+$h3-font-size: 1.953rem;
+$h4-font-size: 1.563rem;
+$h5-font-size: 1.25rem;
+$h6-font-size: 1rem;
 
 
 
-// Typography
-// Change font family for base text
 
-
-// Change font family for headings
-
-
-
-// Change font sizes for h1-h6 using values in assignment
+.navbar-brand {
+    font-family: "Libre Baskerville";
+}
 
 
 
 @import "../node_modules/bootstrap/scss/bootstrap";
-
-// Add additional custom code here
-
-// Target .navbar-brand and change font-family to use 'Libre Baskerville'.
